--- a/style.css
+++ b/style.css
@@ -7,32 +7,81 @@ html {
     padding: 0;
 }
 
-body{
+.background {
+    background-image: url(./src/image/background2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 2rem;
     justify-content: center;
-    align-items: center;
+    align-items: end;
 }
 
-h1{
-    font-size: 2rem;
-    margin-top: 1rem;
-}
-
-h2 {
-    padding: 1rem;
-}
-
-.fotos {
+.images {
+    width: 20rem ;
+    height: calc(20rem * (5/4));
     display: grid;
-    /* grid-template: 1rem 1rem; */
-    grid-template-columns: 15rem 15rem;
+    grid-template-columns: 10rem 10rem;
+    margin: 5.5rem;
+    gap: 0.1rem;
 }
 
+.images .image{
+    width: 10rem;
+    height: calc(10rem * (5/4));
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transition: all 1s ease-out;
+}
 
-.fotos img {
-    width: 15rem;
-    height: calc(150px * (5/4));
+.images .image1 {
+    background-image: url(./src/image/1.png);
+}
+.images .image2 {
+    background-image: url(./src/image/2.png);
+}
+.images .image3 {
+    background-image: url(./src/image/3.png);
+}
+.images .image4 {
+    background-image: url(./src/image/4.png);
+}
+
+@media (max-height: 800px ) {
+    html {
+        font-size: 9px;
+    }
+    
+}
+@media (max-height: 690px ) {
+    html {
+        font-size: 8px;
+    }
+    
+}
+@media (max-height: 615px ) {
+    html {
+        font-size: 7px;
+    }
+    
+}
+
+@media (min-height: 900px ) {
+    html {
+        font-size: 13px;
+    }
+
+    .background{
+        background-size: contain;
+    }
+    
+}
+
+@media (min-width: 900px ) {
+    html {
+        font-size: 12px;
+    }
 }
