--- a/style.css
+++ b/style.css
@@ -25,7 +25,11 @@ html {
     display: grid;
     grid-template-columns: 10rem 10rem;
     margin: 5.5rem;
-    gap: 0.1rem;
+    /* gap: 0.1rem; */
+    border-radius: 1.8gitrem;
+    /* box-sizing: border-box; */
+    background-color: #cb8783;
+    padding: 0.7rem;
 }
 
 .images .image{
@@ -39,15 +43,19 @@ html {
 
 .images .image1 {
     background-image: url(./src/image/1.png);
+    border-radius: 1.5rem 0 0 0 ;
 }
 .images .image2 {
     background-image: url(./src/image/2.png);
+    border-radius:  0 1.5rem 0 0 ;
 }
 .images .image3 {
     background-image: url(./src/image/3.png);
+    border-radius:  0 0 0 1.5rem ;
 }
 .images .image4 {
     background-image: url(./src/image/4.png);
+    border-radius:  0 0 1.5rem 0 ;
 }
 
 @media (max-height: 800px ) {
