--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
     grid-template-columns: 10rem 10rem;
     margin: 5.5rem;
     /* gap: 0.1rem; */
-    border-radius: 1.8gitrem;
+    border-radius: 1.8rem;
     /* box-sizing: border-box; */
     background-color: #cb8783;
     padding: 0.7rem;
